{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 74,
  "lineage": "72ab0aa9-6449-b3ad-b0cc-4468a7d27ad9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:654654628954:internet-gateway/igw-079efc4e5af544089",
            "id": "igw-079efc4e5af544089",
            "owner_id": "654654628954",
            "vpc_id": "vpc-0c6aff1685eaef3d7"
          },
          "dependencies": [
            "aws_vpc.speeqr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:654654628954:route-table/rtb-094b2e4459c01efb7",
            "id": "rtb-094b2e4459c01efb7",
            "owner_id": "654654628954",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079efc4e5af544089",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c6aff1685eaef3d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.speeqr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077067a070b3eafd5",
            "route_table_id": "rtb-094b2e4459c01efb7",
            "subnet_id": "subnet-0f443a1fa7a4db131"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.speeqr",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc5cee122f7e002b",
            "route_table_id": "rtb-094b2e4459c01efb7",
            "subnet_id": "subnet-08f0004f72e5dc1c9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.speeqr",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089bcb35b8f1a1261",
            "route_table_id": "rtb-094b2e4459c01efb7",
            "subnet_id": "subnet-0148c0b692a4aecd3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.speeqr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "speeqr-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:654654628954:security-group/sg-0ea5bc9420eabb51d",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea5bc9420eabb51d",
            "ingress": [],
            "name": "terraform-eks-speeqr-stage-cluster",
            "name_prefix": "",
            "owner_id": "654654628954",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-speeqr"
            },
            "tags_all": {
              "Name": "terraform-eks-speeqr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6aff1685eaef3d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.speeqr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "speeqr-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "154.80.22.226/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-808411300",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ea5bc9420eabb51d",
            "security_group_rule_id": "sgr-0ba94e51a30b7a87c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.speeqr-cluster",
            "aws_vpc.speeqr",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:654654628954:subnet/subnet-0f443a1fa7a4db131",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-south-1a",
            "availability_zone_id": "mes1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f443a1fa7a4db131",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654628954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-0c6aff1685eaef3d7"
          },
          "dependencies": [
            "aws_vpc.speeqr",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:654654628954:subnet/subnet-08f0004f72e5dc1c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-south-1b",
            "availability_zone_id": "mes1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f0004f72e5dc1c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654628954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0c6aff1685eaef3d7"
          },
          "dependencies": [
            "aws_vpc.speeqr",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:654654628954:subnet/subnet-0148c0b692a4aecd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-south-1c",
            "availability_zone_id": "mes1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0148c0b692a4aecd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654628954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0c6aff1685eaef3d7"
          },
          "dependencies": [
            "aws_vpc.speeqr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "speeqr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:654654628954:vpc/vpc-0c6aff1685eaef3d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019235db3eef1e4fe",
            "default_route_table_id": "rtb-0682f573984fd022e",
            "default_security_group_id": "sg-0ace1fabdf4011fc9",
            "dhcp_options_id": "dopt-00f7726e6821ca6f8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6aff1685eaef3d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0682f573984fd022e",
            "owner_id": "654654628954",
            "tags": {
              "Name": "speeqr-stage"
            },
            "tags_all": {
              "Name": "speeqr-stage"
            }
          }
        }
      ]
    }
  ]
}